public final class RegularSquareRole extends SquareRole {
  public RegularSquareRole ( Square s ) {
    super ( s );
  }
}

